tests/parsing/smtlib/v2.7/errors/135_datatype_dec_unopened_par_list_1.smt2
(set-logic ALL)
(declare-datatype foo (par _))
